test/tests/errors/error-record-non-unique-ids.sm
// true
// false
// false
/**/
/**/

program {
    record x(x: int, x: int);
}